Fixed whitespace highlight for plural source entity fiedls in Lotte.

--- a/transifex/addons/lotte/media/css/dataTable.css
+++ b/transifex/addons/lotte/media/css/dataTable.css
@@ -612,7 +612,7 @@ textarea.untranslated{
   padding-bottom:16px;
 }
 
-.source_string {
+.source_string, .source_string_plural {
   overflow:visible;
   text-shadow: 1px 1px 0px #fff;
   padding-bottom:1.25em;
